# slurmpmax

./: README.md  pyproject.toml
slurmpmax/: cli.py  job_scheduler.py
