[tool.poetry]
name = "slurmpmax"
version = "v0.0.1"
description = "slurmjob scheduler for uppmax"
authors = ["BobBorges <robert.d.borges@gmail.com>"]
repository = "https://github.com/what-will-we-eat/slurmpmax"
readme = "README.md"
license = "MIT"
packages = [
        { include = "slurmpmax", from = "" }
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
slurmjob = "slurmpmax.cli:cli"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
